[package]
name = "sgabello"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Async seat manager"
readme = "README.md"
documentation = "https://docs.rs/sgabello"
repository = "https://github.com/verdiwm/sgabello"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
