[package]
name = "saddle"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Async seat manager"
readme = "README.md"
documentation = "https://docs.rs/saddle"
repository = "https://github.com/verdiwm/saddle"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dev-dependencies]
anyhow = "1.0.86"
crossbeam = "0.8.4"
rustix = { version = "0.38.34", features = ["process", "fs"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
colpetto = { version = "0.0.3", path = "../colpetto" }
tokio-stream = "0.1.15"
tracing = "0.1.40"

[dependencies]
futures-util = { version = "0.3.30", default-features = false }
reconciler = "0.0.2"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
